<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ FastNote
  ~ <p/>
  ~ Created by Tung Duong <duongtungls@gmail.com> on 08/01/2017.
  ~ Copyright (c) 2017  Bach Duong Solution
  ~ <p/>
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~ <p/>
  ~ The above copyright notice and this permission notice shall be included in
  ~ all copies or substantial portions of the Software.
  ~ <p/>
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  ~ THE SOFTWARE.
  -->

<android.support.design.widget.CoordinatorLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:scrollbars="vertical" />

    <LinearLayout
        android:id="@+id/empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_gravity="center"
        android:visibility="gone"
        android:gravity="center"
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <ImageView
            android:layout_width="110dp"
            android:layout_height="110dp"
            app:srcCompat="@drawable/ic_empty_categories"
            android:scaleType="center"
            tools:ignore="MissingPrefix"
            android:contentDescription="@string/empty"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/medium_text"
            android:layout_marginTop="16dp"
            android:text="@string/no_categories"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/main_text"
            android:textSize="@dimen/smaller_text"
            android:text="@string/no_categories_desc"/>
    </LinearLayout>

    <com.baiyang.fastnote.widget.Fab
        android:id="@+id/fab"
        android:layout_width="@dimen/fab"
        android:layout_height="@dimen/fab"
        android:elevation="4dp"
        android:scaleType="center"
        app:layout_anchor="@+id/recyclerView"
        app:layout_anchorGravity="bottom|end"
        android:clickable="true"
        android:background="?attr/fabColor"
        app:srcCompat="@drawable/fab_add_category"
        android:contentDescription="@string/new_category"
        android:layout_gravity="end|bottom"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_behavior="com.baiyang.fastnote.inner.FabBehavior"
        tools:ignore="MissingPrefix,UnusedAttribute"/>

</android.support.design.widget.CoordinatorLayout>
