<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ MIT License
  ~
  ~ Copyright (c) 2017 Duong Tung <duongtungls@gmail.com>
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/title_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="24dp"
        android:paddingBottom="20dp"
        android:singleLine="true"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:gravity="start"
        android:textColor="@color/main_text"
        android:textSize="@dimen/medium_text"/>

    <include layout="@layout/splitter" />

    <com.baiyang.fastnote.widget.FixedHeightRecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:scrollbars="vertical" />

    <include layout="@layout/splitter" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/new_btn"
            android:layout_width="@dimen/dialog_button_height"
            android:layout_height="@dimen/dialog_button_height"
            android:scaleType="center"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:clickable="true"
            app:srcCompat="@drawable/new_folder"
            android:background="@drawable/ripple_rect"
            android:contentDescription="@string/new_folder"
            tools:ignore="MissingPrefix"/>

        <TextView
            android:id="@+id/positive_btn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dialog_button_height"
            android:minWidth="@dimen/dialog_button_width"
            android:gravity="center"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:padding="8dp"
            android:clickable="true"
            android:background="@drawable/ripple_rect"
            android:textSize="@dimen/dialog_button"
            android:text="@string/choose"
            android:textColor="@color/main_color"/>

        <TextView
            android:id="@+id/negative_btn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dialog_button_height"
            android:minWidth="@dimen/dialog_button_width"
            android:gravity="center"
            android:layout_toRightOf="@+id/positive_btn"
            android:layout_toEndOf="@+id/positive_btn"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:padding="8dp"
            android:clickable="true"
            android:text="@string/cancel"
            android:background="@drawable/ripple_rect"
            android:textSize="@dimen/dialog_button"
            android:textColor="@color/secondary_text"/>

    </RelativeLayout>

</LinearLayout>
