<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ FastNote
  ~ <p/>
  ~ Created by Tung Duong <duongtungls@gmail.com> on 08/01/2017.
  ~ Copyright (c) 2017  Bach Duong Solution
  ~ <p/>
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~ <p/>
  ~ The above copyright notice and this permission notice shall be included in
  ~ all copies or substantial portions of the Software.
  ~ <p/>
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  ~ THE SOFTWARE.
  -->

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_height="@dimen/toolbar_height"
        android:layout_width="match_parent"
        android:background="?attr/colorPrimary"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="@dimen/toolbar_height"
            android:layout_height="@dimen/toolbar_height"
            android:layout_gravity="start|top"
            app:srcCompat="@drawable/ic_back"
            android:clickable="true"
            android:background="@drawable/ripple_circle"
            android:scaleType="center"
            tools:ignore="MissingPrefix"
            android:contentDescription="@string/back"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:maxLines="1"
            android:layout_gravity="start|center_vertical"
            android:textColor="@color/white"
            android:textSize="@dimen/large_text" />
    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.Toolbar
        android:id="@+id/selection_toolbar"
        android:layout_height="@dimen/toolbar_height"
        android:layout_width="match_parent"
        android:background="@color/gray_dark"
        android:visibility="gone"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp">

        <ImageView
            android:id="@+id/selection_back"
            android:layout_width="@dimen/toolbar_height"
            android:layout_height="@dimen/toolbar_height"
            android:layout_gravity="start|top"
            app:srcCompat="@drawable/ic_back"
            android:clickable="true"
            android:background="@drawable/ripple_circle"
            android:scaleType="center"
            tools:ignore="MissingPrefix"
            android:contentDescription="@string/menu"/>

        <ImageView
            android:id="@+id/selection_delete"
            android:layout_width="@dimen/toolbar_height"
            android:layout_height="@dimen/toolbar_height"
            android:layout_gravity="end|top"
            app:srcCompat="@drawable/ic_delete"
            android:clickable="true"
            android:background="@drawable/ripple_circle"
            android:scaleType="center"
            tools:ignore="MissingPrefix"
            android:contentDescription="@string/menu"/>

        <TextView
            android:id="@+id/selection_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:singleLine="true"
            android:layout_gravity="start|center_vertical"
            android:textColor="@color/white"
            android:textSize="@dimen/large_text" />
    </android.support.v7.widget.Toolbar>

    <FrameLayout
        android:id="@+id/container"
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/adView" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/admob">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>
