<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ MIT License
  ~
  ~ Copyright (c) 2017 Duong Tung <duongtungls@gmail.com>
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="0px"
        android:layout_height="0px"
        tools:ignore="UselessLeaf" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/title_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/hint_text"
            android:textSize="@dimen/medium_text"
            android:textColor="@color/main_text"
            android:hint="@string/title"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/small_text"
        android:text="@string/choose_a_color"
        android:textColor="@color/secondary_text"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="16dp">

        <ImageView
            android:id="@+id/theme_red"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/theme"
            android:scaleType="center"
            android:background="@drawable/circle_red"/>

        <ImageView
            android:id="@+id/theme_pink"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:scaleType="center"
            android:contentDescription="@string/theme"
            android:background="@drawable/circle_pink"/>

        <ImageView
            android:id="@+id/theme_purple"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:scaleType="center"
            android:background="@drawable/circle_purple"
            android:contentDescription="@string/theme"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/theme_blue"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:scaleType="center"
            android:contentDescription="@string/theme"
            android:background="@drawable/circle_blue"/>

        <ImageView
            android:id="@+id/theme_cyan"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:scaleType="center"
            android:contentDescription="@string/theme"
            android:background="@drawable/circle_cyan"/>

        <ImageView
            android:id="@+id/theme_teal"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:scaleType="center"
            android:contentDescription="@string/theme"
            android:background="@drawable/circle_teal"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/theme_green"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:scaleType="center"
            android:contentDescription="@string/theme"
            android:background="@drawable/circle_green"/>

        <ImageView
            android:id="@+id/theme_amber"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:scaleType="center"
            android:contentDescription="@string/theme"
            android:background="@drawable/circle_amber"/>

        <ImageView
            android:id="@+id/theme_orange"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:scaleType="center"
            android:contentDescription="@string/theme"
            android:background="@drawable/circle_orange"/>

    </LinearLayout>

</LinearLayout>
